fix layout of band page in low resulution (on mobile)

--- a/_sass/_band.scss
+++ b/_sass/_band.scss
@@ -9,8 +9,8 @@
         width: 100%;
         float: none;
         .band-member {
-            float: left;
-            width: 300px;
+            float: none;
+            width: 100%;
         }
     }
 
